<resources>
    <string name="app_name">Easy Party</string>

    <!-- Tela Login  -->
    <string name="login_hint_email">Email</string>
    <string name="login_hint_senha">Senha</string>
    <string name="login_checkbox_relembrar">Relembrar minha senha</string>
    <string name="login_btn_entrar">Entrar</string>
    <string name="login_cadastro">Cadastre-se</string>

    <!-- Tela Menu Principal -->
    <string name="menu_15">15 Anos</string>
    <string name="menu_aniversario">Aniversário</string>
    <string name="menu_casamento">Casamento</string>
    <string name="menu_churrasco">Churrasco</string>
    <string name="menu_empresarial">Empresarial</string>
    <string name="menu_festa_geral">Festa em Geral</string>
    <string name="menu_festa_infantil">Festa Infantil</string>
    <string name="menu_formatura">Formatura</string>

    <!-- Tela Adicionar Convidados-->
    <string name="adc_titulo">Adicionar Convidados</string>
    <string name="adc_nome">Nome:</string>
    <string name="adc_cpf">CPF:</string>
    <string name="adc_idade">Idade:</string>

    <!-- Tela Cadastro -->
    <string name="cadastro_titulo">Cadastro Usuário</string>
    <string name="cadastro_nome">Nome:</string>
    <string name="cadastro_email">Email:</string>
    <string name="cadastro_data_nascimento">Data de Nascimento:</string>
    <string name="cadastro_telefone">Telefone:</string>
    <string name="cadastro_senha">Senha:</string>
    <string name="cadastro_btn">Salvar</string>
    <string name="cadastro_retornar">Retornar</string>

    <!-- Tela Cadastro Eventos -->
    <string name="titulo_evt">Cadastro Evento</string>
    <string name="aniversariante">Aniversariante:</string>
    <string name="dt_inicio">Data:</string>
    <string name="dt_final">Hora: </string>
    <string name="qtd_pessoas">Quantidade de Pessoas:</string>
    <string name="endereco">Endereço:</string>
    <string name="decoracao">Decoração:</string>
    <string name="musico">Música:</string>
    <string name="btn_convidados">Listar Convidados</string>


    <!-- Resultado -->
    <string name="titulo_resultado">Resultado</string>
    <string name="agua">Água:</string>
    <string name="cerveja">Cerveja:</string>
    <string name="refrigerante">Refrigerante:</string>
    <string name="suco">Suco:</string>
    <string name="retornar">Retornar</string>

    <string name="listItemNome"><b>Nome:</b></string>
    <string name="listItemData"><b>Data:</b></string>
    <string name="listItemHora"><b>Hora:</b></string>

</resources>
