<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/fundoLogin"
    tools:context=".login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adc_titulo"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adc_nome"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:layout_marginTop="10dp"
            android:height="35dp"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adc_cpf"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            />

        <EditText
            android:id="@+id/edtCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:layout_marginTop="10dp"
            android:height="35dp"
            />


        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adc_idade"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            />

        <EditText

            android:id="@+id/edtIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:layout_marginTop="10dp"
            android:height="35dp"
            android:width="120dp"
            />

        <Button
            android:id="@+id/btnSalvarCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_btn"
            android:layout_marginTop="30dp"
            android:textSize="17dp"
            android:textColor="@color/fundoLogin"
            android:background="@drawable/shape_btnlogin"/>

    </LinearLayout>
</ScrollView>