<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/fundoLogin"
    tools:context=".cadastroQuinze">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="15 Anos"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Responsável:"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/edtResponsavel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:height="@dimen/height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aniversariante"
            android:textSize="@dimen/paddingText"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/marginTop"/>

        <EditText
            android:id="@+id/edtAniversariante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:height="@dimen/height"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt_inicio"
                    android:textSize="@dimen/paddingText"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/marginTop"/>

                <EditText
                    android:id="@+id/edtData"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edtlogin"
                    android:height="@dimen/height"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="17dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dt_final"
                    android:textSize="@dimen/paddingText"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/marginTop"/>

                <EditText
                    android:id="@+id/edtHora"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edtlogin"
                    android:height="@dimen/height"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qtd_pessoas"
            android:textSize="@dimen/paddingText"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/marginTop"
            />

        <EditText
            android:id="@+id/edtQtdPessoas"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:height="@dimen/height"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textSize="@dimen/paddingText"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/marginTop"/>

        <EditText
            android:id="@+id/edtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:height="@dimen/height"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decoracao"
            android:textSize="@dimen/paddingText"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/marginTop"/>

        <EditText
            android:id="@+id/edtDecoracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:height="@dimen/height"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musico"
            android:textSize="@dimen/paddingText"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/marginTop"/>

        <EditText
            android:id="@+id/edtMusica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edtlogin"
            android:height="@dimen/height"
            android:layout_marginBottom="@dimen/marginTop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btnSalvarEvento"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btnlogin"
                android:text="@string/cadastro_btn"
                android:textColor="@color/fundoLogin"
                android:textSize="17dp"
                android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btnConvidados"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btnlogin"
                android:text="Convidados"
                android:textColor="@color/fundoLogin"
                android:textSize="17dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>